media/css/base.css
@font-face{
    font-family:'Open Sans Light';
    src:url('//www.mozilla.org/media/fonts/OpenSans-Light-webfont.eot');
    src:url('//www.mozilla.org/media/fonts/OpenSans-Light-webfont.eot?#iefix') format('embedded-opentype'),
        url('//www.mozilla.org/media/fonts/OpenSans-Light-webfont.woff') format('woff'),
        url('//www.mozilla.org/media/fonts/OpenSans-Light-webfont.ttf') format('truetype'),
        url('//www.mozilla.org/media/fonts/OpenSans-Light-webfont.svg#OpenSansLight') format('svg');
    font-weight:300;
    font-style:normal
}

@font-face{
    font-family:'Open Sans';
    src:url('//www.mozilla.org/media/fonts/OpenSans-Regular-webfont.eot');
    src:url('//www.mozilla.org/media/fonts/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'),
        url('//www.mozilla.org/media/fonts/OpenSans-Regular-webfont.woff') format('woff'),
        url('//www.mozilla.org/media/fonts/OpenSans-Regular-webfont.ttf') format('truetype'),
        url('//www.mozilla.org/media/fonts/OpenSans-Regular-webfont.svg#OpenSansRegular') format('svg');
    font-weight:normal;
    font-style:normal
}

@font-face{
    font-family:'Open Sans';
    src:url('//www.mozilla.org/media/fonts/OpenSans-Semibold-webfont.eot');
    src:url('//www.mozilla.org/media/fonts/OpenSans-Semibold-webfont.eot?#iefix') format('embedded-opentype'),
        url('//www.mozilla.org/media/fonts/OpenSans-Semibold-webfont.woff') format('woff'),
        url('//www.mozilla.org/media/fonts/OpenSans-Semibold-webfont.ttf') format('truetype'),
        url('//www.mozilla.org/media/fonts/OpenSans-Semibold-webfont.svg#OpenSansSemibold') format('svg');
    font-weight:bold;
    font-style:normal
}


html {
    background:#333;
}

body {
    background:#f5f1e8 url(../img/mozorg-gradient.png) repeat-x top center;
    padding-top:60px;
    font:16px/24px 'Open Sans', 'Lucida Sans', 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
}

.skip{
	left:-999em;
	position:absolute;
}

.skip:focus{
	background:rgb(255,255,255);
	color:rgb(44,44,44);
	height:35px;
	left:0;
	padding-top:5px;
	right:0;
	text-align:center;
	top:0;
	z-index:1031; /* One more than .nav-bar-fixed-top */
}

.huge, .large, h1, h2, h3, h4, #profile-info dt, #profile-info dd, #bio {
    font-family:'Open Sans Light', 'Lucida Sans', 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
    font-weight:normal;
    text-shadow:0 1px 0 rgba(255,255,255,0.75);
}

.huge {
    font-size:108px;
    letter-spacing:-4px;
    line-height:100%;
}

.large {
    font-size:72px;
    letter-spacing:-3px;
    line-height:100%;
}

h1 {
    font-size:48px;
    letter-spacing:-2px;
    line-height:100%;
    margin-bottom:5px;
}

h2 {
    font-size:32px;
    letter-spacing:-1px;
    line-height:100%;
    margin-bottom:5px;
}

h3, #profile-info dt {
    font-size:28px;
    letter-spacing:-.5px;
    line-height:100%;
}

h4 {
    font-size:24px;
    letter-spacing:-.25px;
    line-height:100%;
}

.small,small {
    font-size:12px;
    line-height:100%;
}

.brand {
    text-transform:lowercase;
}

.welcome {
    background:url(../img/home-anon-bg.png) top center no-repeat;
    height:350px;
    text-align:center;
    width:445px;
    margin:auto;
    padding:85px 125px 50px 175px;
}

.welcome h1 {
    color:#B91E27;
    font-size:45px;
    line-height:0.8;
    margin:10px 6% 15px 0;
    padding:0;
}

.welcome h1 small {
    font-size:24px;
    letter-spacing:-0.25px;
    font-weight: 300;
}

.welcome p {
    margin-top: 30px;
}

#body-home h3 {
    margin-bottom: 10px;
}

#home-options ul {
    list-style: none;
    margin-left: 0;
}

#home-options li {
    padding: 15px 7px;
    margin-left: 11px;
}

#home-options .btn {
    width: 175px;
    margin-right: 11px;
}

#home-group {
    height: 220px;
    margin: 10px 4px;
    background-color: #DBD6CC;
    border: 1px solid #999999;
}

#home-group h2 {
    margin: 5px 0 0 10px;
}

#home-group dl {
    margin: 20px;
}

#header h1 a,#header h1 span {
    color:#fff;
    font-weight:700;
    text-decoration:none;
    text-shadow:0 1px 5px rgba(0,0,0,0.4);
}

#header h1 a:hover {
    color:#eee;
    text-decoration:none;
    text-shadow:0 1px 5px rgba(0,0,0,0.4), 0 0 10px rgba(255,255,255,0.4);
}

#nav a,#nav span {
    color:#ccc;
}

#nav a:hover,#nav a:focus {
    color:#f59d56;
}

#nav .selected,#nav .on {
    background:url(../img/mozilla/menu-divider.png) bottom right repeat-x;
    color:#f59d56;
}

#quick-search {
    white-space:nowrap;
    margin-bottom:0;
}

#quick-search #q {
    background:#fff url(../img/mozilla/search-icon.png) 2px 50% no-repeat;
    color:#999;
    position:relative;
    z-index:4;
    top:8px;
    height:16px;
    padding:2px 4px 2px 20px;
}

#quick-search #q:focus {
    color:#333;
}

#quick-search-btn {
    background:url(../img/mozilla/search-submit.png) 2px 50% no-repeat;
    left:-18px;
    width:42px;
    height:23px;
    border:0;
    font-size:1px;
    text-indent:-9999px;
    position:relative;
    vertical-align:top;
    z-index:1;
    top:8px;
}

#main-content h1 {
    color:#b91e27;
}

footer {
    background:#333;
    color:#999;
    border-top:6px solid #B91E27;
    padding:18px 0;
    bottom:0;
}

nav .nav a.browserid-login {
    line-height:0;
    padding-bottom:0;
}
/* ... */

